[gd_scene load_steps=8 format=3 uid="uid://x77m5b33wtgi"]

[ext_resource type="Script" path="res://entities/characters/enemies/template/template.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://5cidm5k2s6cj" path="res://graphics/icon.svg" id="2_texture"]
[ext_resource type="Script" path="res://objects/interactable.gd" id="3_qytdd"]
[ext_resource type="PackedScene" uid="uid://b08lb42hrodkb" path="res://ui/hud/floating_numbers.tscn" id="4_n8r63"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_attack"]
radius = 80.0
height = 300.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_attack"]
bg_color = Color(1, 0.2, 0.2, 0.3)
border_width_left = 24
border_width_top = 24
border_width_right = 24
border_width_bottom = 24
border_color = Color(1, 0.3, 0.3, 0.7)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color(1, 0.2, 0.2, 0.6)
shadow_size = 12

[node name="TemplateEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_script")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_texture")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="HitDetector" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("3_qytdd")
interact_name = "Enemy_takes_a_hit"
health = 120

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource("CircleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-60, -100)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_attack")

[node name="AttackRange" type="Panel" parent="AttackArea"]
visible = false
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(100, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_attack")

[node name="FloatingNumbers" parent="." instance=ExtResource("4_n8r63")]

[connection signal="input_event" from="HitDetector" to="." method="_on_hit_detector_input_event"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
